@@ -15,73 +15,50 @@ public class Controller {
     private List<Player> playersToPlay;
     private List<Player> playersHavePlayed;
 
-    private boolean isPlanningFinished;
+    private Model model;
 
     private PlanningPhase planning;
     private ActionPhase action;
 
+    private boolean isPlanningFinished;
+
     private final int numStudentToMove;
 
-    private Model model;
-
-    protected Controller(List<Player> players, List<Cloud> clouds, StudentBag bag, int numStudentToMove, Model model) {
+    public Controller(List<Player> players, List<Cloud> clouds, StudentBag bag, int numStudentToMove, Model model) {
 
         this.playersToPlay = players;
         this.playersHavePlayed = new ArrayList<>();
         this.numStudentToMove = numStudentToMove;
-
         this.model = model;
 
         this.isPlanningFinished = false;
-        this.planning.addStudentsToCloud(clouds, bag);
-
-        this.action = null;
-
     }
 
-
-    protected void playAssistantCard(int playerID, int choice) {
-        if (!isPlanningFinished) {
-            Player player = this.playersToPlay.get(0);
-            if (player.getId() == playerID) {
-                this.planning.playAssistantCard(player, choice);
+    protected void playAssistantCard(int playerId, int choice) {
+        if (!isPlanningFinished && playersToPlay.size() > 0) {
+            Player player = playersToPlay.get(0);
+            if (player.getId() == playerId) {
+                planning = new PlanningPhase(player, model);
+                planning.playAssistantCard(choice);
+                if (planning.isEnded()) {
+                    endPlayerTurn(player);
+                }
             }
-            playersHavePlayed.add(playersToPlay.remove(0));
-        }
-
-        if (playersToPlay.size() == 0) {
-            isPlanningFinished = true;
-            orderPlayersForAction();
-        }
-    }
-
-    protected ActionPhase startActionPhase(int playerID) {
-        if (isPlanningFinished && action == null) {
-            Player player = this.playersToPlay.get(0);
-            if (player.getId() == playerID) {
-                List<Player> otherPlayers = new ArrayList<>(playersToPlay);
-                otherPlayers.remove(player);
-                otherPlayers.addAll(playersHavePlayed);
-                action = new ActionPhase(player, otherPlayers, numStudentToMove, model);
-                return action;
+            if (playersToPlay.size() < 0) {
+                endPlanningPhase();
             }
         }
-        return null;
     }
 
-    protected ActionPhase endActionPhase(int playerID) {
-        if (action != null) {
-            if (this.action.getPlayer().getId() == playerID && action.isEnded()) {
-                playersHavePlayed.add(playersToPlay.remove(0));
-                action = null;
-            }
-        }
-        return action;
+
+
+    private void endPlanningPhase() {
+        isPlanningFinished = true;
     }
 
-    protected List<Player> end() {
-        orderPlayersForNextRound();
-        return new ArrayList<>(this.playersToPlay);
+    private void endPlayerTurn(Player player) {
+        playersToPlay.remove(player);
+        playersHavePlayed.add(player);
     }
 
     private void orderPlayersForAction(){
@@ -102,11 +79,13 @@ public class Controller {
         firstPlayerId = temp.get(0).getId();
 
         temp.addAll(this.playersHavePlayed
-                    .stream()
-                    .sorted(Comparator.comparingInt(x -> (x.getId() + firstPlayerId) % 3)) //Modulo 3 perché così i giocatori vengono ordinati SEMPRE in senso orario
-                    .collect(Collectors.toList()));
+                .stream()
+                .sorted(Comparator.comparingInt(x -> (x.getId() + firstPlayerId) % 3)).toList());
 
         this.playersToPlay = temp;
     }
 
+    public List<Player> getPlayersHavePlayed() {
+        return new ArrayList<>(playersHavePlayed);
+    }
 }
